solve dark mode issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,8 +21,7 @@
 }
 
 *{
-    color-scheme: only light;
-  
+  -webkit-text-fill-color: initial;  
 }
 
 body {
